# aio-edge-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build-images.yaml  test.yaml
datasets/: README.md
datasets/scripts/: download_datasets.py
deploy/aio-connected/dataflows/: ai-results-to-cloud.yaml  opc-ua-to-mqtt.yaml
deploy/aio-connected/helm/: values-time-series-ml.yaml
deploy/standalone/: docker-compose.yaml
deploy/standalone/k8s/: configmap.yaml  inference-server.yaml  mosquitto.yaml  namespace.yaml  sensor-simulator.yaml
docs/: architecture.md  deployment-guide-arc-k3s.md  foundation-models-vs-traditional-ml.md  moment-model-behavior.md  prerequisites.md
docs/use-cases/: anomaly-detection.md  predictive-maintenance.md
notebooks/: 01-explore-moment.ipynb  02-anomaly-detection-multisensor.ipynb
samples/01-quick-test/: sample_data.csv  test_moment.py
samples/02-mqtt-integration/: test_mqtt_bridge.py
samples/03-end-to-end/: multi_sensor_fusion.py  process_anomaly_demo.py  run_e2e.py
samples/04-http-api-tests/: test_moment_api.py
src/dashboard/dashboards/: ai-predictions.json  sensor-overview.json
src/dashboard/provisioning/: dashboards.yaml  datasources.yaml
src/inference-server/: Dockerfile  config.py  mqtt_bridge.py  requirements.txt  schemas.py  server.py
src/inference-server/model_providers/: __init__.py  base.py  chronos_provider.py  custom_provider.py  moirai_provider.py  moment_provider.py
src/sensor-simulator/: Dockerfile  mqtt_publisher.py  requirements.txt  simulator.py
(+19 files in other folders)
